[project]
name = "ipeaindices"
version = "0.1.0"
description = "Ãndices do IPEA de forma simples"
readme = "README.md"
authors = [
  {name = "nukhes", email = "nukhes@protonmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = ["ipeadatapy", "pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
